Скорректировала все так, как вчера обсуждали

--- a/index.html
+++ b/index.html
@@ -35,90 +35,110 @@
       </nav>
     </header>
     <main>
-      <h1>Gallery</h1>
+      <h1 class="main-title">Gallery</h1>
       <section class="card-list">
         <div class="card">
-          <img class="card__preview" src="img/Some_Card_1.png" alt="Some Card 1" />
-          <h2 class="card__title">Some Card 1</h2>
-          <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <img
+            class="card__preview"
+            src="img/Some_Card_1.png"
+            alt="Some Card 1"
+          />
+          <div class="card__title">Some Card 1</div>
+          <p class="card__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
           <a class="card__button" href="#">Read more</a>
         </div>
 
         <div class="card">
-          <div class="some-card">
-            <img src="img/Some_Card_2.png" alt="Some Card 2" />
-            <h2>Some Card 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <div class="card-button">
-              <a class="card-button-txt" href="#"><p>Read more</p></a>
-            </div>
-          </div>
+          <img
+            class="card__preview"
+            src="img/Some_Card_2.png"
+            alt="Some Card 2"
+          />
+          <div class="card__title">Some Card 2</div>
+          <p class="card__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+          <a class="card__button" href="#">Read more</a>
         </div>
 
         <div class="card">
-          <div class="some-card">
-            <img src="img/Some_Card_3.png" alt="Some Card 3" />
-            <h2>Some Card 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <div class="card-button">
-              <a class="card-button-txt" href="#"><p>Read more</p></a>
-            </div>
-          </div>
+          <img
+            class="card__preview"
+            src="img/Some_Card_3.png"
+            alt="Some Card 3"
+          />
+          <div class="card__title">Some Card 3</div>
+          <p class="card__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+          <a class="card__button" href="#">Read more</a>
         </div>
 
         <div class="card">
-          <div class="some-card">
-            <img src="img/Some_Card_4.png" alt="Some Card 4" />
-            <h2>Some Card 4</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <div class="card-button">
-              <a class="card-button-txt" href="#"><p>Read more</p></a>
-            </div>
-          </div>
+          <img
+            class="card__preview"
+            src="img/Some_Card_4.png"
+            alt="Some Card 4"
+          />
+          <div class="card__title">Some Card 4</div>
+          <p class="card__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+          <a class="card__button" href="#">Read more</a>
         </div>
 
         <div class="card">
-          <div class="some-card">
-            <img src="img/Some_Card_5.png" alt="Some Card 5" />
-            <h2>Some Card 5</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <div class="card-button">
-              <a class="card-button-txt" href="#"><p>Read more</p></a>
-            </div>
-          </div>
+          <img
+            class="card__preview"
+            src="img/Some_Card_5.png"
+            alt="Some Card 5"
+          />
+          <div class="card__title">Some Card 5</div>
+          <p class="card__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+          <a class="card__button" href="#">Read more</a>
         </div>
 
         <div class="card">
-          <div class="some-card">
-            <img src="img/Some_Card_6.png" alt="Some Card 6" />
-            <h2>Some Card 6</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <div class="card-button">
-              <a class="card-button-txt" href="#"><p>Read more</p></a>
-            </div>
-          </div>
+          <img
+            class="card__preview"
+            src="img/Some_Card_6.png"
+            alt="Some Card 6"
+          />
+          <div class="card__title">Some Card 6</div>
+          <p class="card__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+          <a class="card__button" href="#">Read more</a>
         </div>
 
         <div class="card">
-          <div class="some-card">
-            <img src="img/Some_Card_7.png" alt="Some Card 7" />
-            <h2>Some Card 7</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <div class="card-button">
-              <a class="card-button-txt" href="#"><p>Read more</p></a>
-            </div>
-          </div>
+          <img
+            class="card__preview"
+            src="img/Some_Card_7.png"
+            alt="Some Card 7"
+          />
+          <div class="card__title">Some Card 7</div>
+          <p class="card__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+          <a class="card__button" href="#">Read more</a>
         </div>
 
         <div class="card">
-          <div class="some-card">
-            <img src="img/Some_Card_8.png" alt="Some Card 8" />
-            <h2>Some Card 8</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <div class="card-button">
-              <a class="card-button-txt" href="#"><p>Read more</p></a>
-            </div>
-          </div>
+          <img
+            class="card__preview"
+            src="img/Some_Card_8.png"
+            alt="Some Card 8"
+          />
+          <div class="card__title">Some Card 8</div>
+          <p class="card__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+          <a class="card__button" href="#">Read more</a>
         </div>
       </section>
     </main>
